# solanatoken

solanatoken/: Anchor.toml  README.md
solanatoken/programs/solanatoken/: Cargo.toml
solanatoken/programs/solanatoken/src/: lib.rs
solanatoken/tests/: solanatoken.ts
